chapter_03/eks-sample-app/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app
    spec:
      containers:
      # TODO:AWS_ACCOUNT_ID(123456789)を自身のAWSアカウントIDに置き換えてください。
      - image: 674582907715.dkr.ecr.ap-northeast-1.amazonaws.com/sample-app:latest
        imagePullPolicy: Always
        name: app
        ports:
        - containerPort: 80
        volumeMounts:
        - name: mount
          mountPath: "/mount"
          readOnly: true
          
      volumes:
        - name: mount
          emptyDir: {}
